force-app/main/default/objects/Scheme_Hierarchy__c/Scheme_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Scheme Hierarchy</label>
    <nameField>
        <label>Scheme Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheme Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>