force-app/main/default/objects/Scheme_Hierarchy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheme Hierarchies</relationshipLabel>
    <relationshipName>Scheme_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>