force-app/main/default/objects/Scheme_Hierarchy__c/fields/Hub__c.field-meta.xml
<CustomField>
    <fullName>Hub__c</fullName>
    <label>Hub</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andhra Pradesh</fullName>
            </value>
            <value>
                <fullName>Aurangabad</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Central Karnataka</fullName>
            </value>
            <value>
                <fullName>Dhule</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Kolhapur</fullName>
            </value>
            <value>
                <fullName>Konkan Maharashtra</fullName>
            </value>
            <value>
                <fullName>Latur</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Mysore</fullName>
            </value>
            <value>
                <fullName>Nanded</fullName>
            </value>
            <value>
                <fullName>Nasik</fullName>
            </value>
            <value>
                <fullName>North Kanara</fullName>
            </value>
            <value>
                <fullName>North Karnataka</fullName>
            </value>
            <value>
                <fullName>North Kerala</fullName>
            </value>
            <value>
                <fullName>PCMC</fullName>
            </value>
            <value>
                <fullName>Pune City</fullName>
            </value>
            <value>
                <fullName>Pune UPC</fullName>
            </value>
            <value>
                <fullName>Solapur</fullName>
            </value>
            <value>
                <fullName>South Kanara</fullName>
            </value>
            <value>
                <fullName>South Kerala</fullName>
            </value>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Hubli</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>