force-app/main/default/objects/Scheme_Hierarchy__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Scheme Hierarchies</relationshipLabel>
    <relationshipName>Scheme_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>