force-app/main/default/objects/Scheme_Hierarchy__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Scheme Hierarchies</relationshipLabel>
    <relationshipName>Scheme_Hierarchies</relationshipName>
    <type>Lookup</type>
</CustomField>