force-app/main/default/objects/Scheme_Hierarchy__c/fields/Scheme_Holder_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Holder_Type__c</fullName>
    <label>Scheme Holder Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>