force-app/main/default/objects/Scheme_Hierarchy__c/validationRules/Scheme_Holder_Type_Field_Must_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Scheme_Holder_Type_Field_Must_Match</fullName>
    <active>true</active>
    <description>Only fires if Scheme Holder Type is set. Requires the matching field for that level to be filled in too.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(TEXT(Scheme_Holder_Type__c))),
    OR(
        AND(ISPICKVAL(Scheme_Holder_Type__c, &apos;Distributor&apos;), ISBLANK(Distributor__c)),
        AND(ISPICKVAL(Scheme_Holder_Type__c, &apos;Hub&apos;), ISBLANK(TEXT(Hub__c))),
        AND(ISPICKVAL(Scheme_Holder_Type__c, &apos;Region&apos;), ISBLANK(Region__c)),
        AND(ISPICKVAL(Scheme_Holder_Type__c, &apos;Retailer&apos;), ISBLANK(Account__c))
    )
)</errorConditionFormula>
    <errorDisplayField>Scheme_Holder_Type__c</errorDisplayField>
    <errorMessage>The field matching the selected Scheme Holder Type must be filled in (Distributor level needs Distributor, Hub level needs Hub, Region level needs Region, Retailer level needs Account).</errorMessage>
</ValidationRule>