force-app/main/default/objects/Scheme_Hierarchy__c/validationRules/Validate_Account_Region_State_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Account_Region_State_Match</fullName>
    <active>true</active>
    <description>If an account and region is selected, the system will validate if the account’s primary state and the selected region is the same.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Account__c)),
    NOT(ISBLANK(Region__c)),
    Account__r.Primary_State__c &lt;&gt; Region__r.Name 
)</errorConditionFormula>
    <errorDisplayField>Region__c</errorDisplayField>
    <errorMessage>Selected Region does not match the Account’s Primary State. Please choose a valid Region.</errorMessage>
</ValidationRule>